// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly MessageListItem for assistant 1`] = `
<View
  style={
    {
      "marginTop": 12,
      "marginVertical": 12,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "flexDirection": "row",
        "marginTop": 12,
      }
    }
  >
    <View
      accessibilityLabel="components.messageListItem.copy"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
          },
          false,
        ]
      }
    >
      <PlatformIcon
        androidIconName="content_copy"
        color="#7c7c7c"
        iosIconName="doc.on.doc"
        size={14}
      />
      <Text
        style={
          [
            {
              "includeFontPadding": false,
              "lineHeight": 16,
              "marginLeft": 4,
            },
            {
              "color": "#7c7c7c",
            },
          ]
        }
        variant="caption"
      >
        components.messageListItem.copy
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders correctly MessageListItem for user 1`] = `
<View
  style={
    {
      "alignItems": "flex-end",
      "alignSelf": "flex-end",
      "marginVertical": 12,
      "maxWidth": "90%",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 16,
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "#ebebeb",
        },
        false,
      ]
    }
  >
    <Text
      style={
        {
          "fontSize": 15,
          "lineHeight": 22,
        }
      }
    >
      Is the water wet?
    </Text>
  </View>
</View>
`;
